--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <title>Document</title>
+</head>
+<body>
+    <form name="PhraseForm">
+        <input type='text'name="PhraseBox" placeholder="Get to know each other">
+        <input type='button' value="Generate a Fun Question" onClick="pickRandomPhrase(document.PhraseForm);">
+        <input type="reset" value="Start Again" onClick="clearForm(this.form)">
+    </form>
+    
+   <script src="./source.js"></script>
+</body>
+</html>
+
+
+
